syntax = "proto3";

message DateDescription {
    DateFormat date_format = 1;
    TimeFormat time_format = 2;
}
enum DateFormat {
    Local = 0;
    US = 1;
    ISO = 2;
    Friendly = 3;
}
enum TimeFormat {
    TwelveHour = 0;
    TwentyFourHour = 1;
}
